# python

./: .gitignore  README.md  pyproject.toml
test/: test_delete.py  test_upload.py  test_uploadfly.py
uploadfly/: __init__.py  uploadfly.py
uploadfly/utils/: types.py
